--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "core-data-structures-week27",
   "version": "1.0.0",
   "description": "Write tests and implementations for common data structures.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel --copy-files src --out-dir dist",
+    "build:watch": "npm run build -- --watch",
+    "test": "mocha --compilers js:babel-register ./spec/*.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/asantos3026/core-data-structures-week27/issues"
   },
-  "homepage": "https://github.com/asantos3026/core-data-structures-week27#readme"
+  "homepage": "https://github.com/asantos3026/core-data-structures-week27#readme",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
+    "chai-change": "^2.1.2",
+    "mocha": "^3.2.0"
+  }
 }
